...
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sf5-jY-b6I">
                                <rect key="frame" x="0.0" y="44" width="414" height="70"/>
                                <subviews>
                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="TcP-YN-fYs">
                                        <rect key="frame" x="123.5" y="19.5" width="167" height="32"/>
                                        <segments>
                                            <segment title="Movies"/>
                                            <segment title="Watchlists"/>
                                        </segments>
                                    </segmentedControl>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HdG-Pm-Rie">
                                        <rect key="frame" x="348" y="10" width="50" height="50"/>
                                        <subviews>
                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="magnifyingglass" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="BVj-it-JsG">
...
