...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Watchlists" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GbW-1D-j8F">
                                        <rect key="frame" x="167.5" y="9.5" width="79" height="21"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="plus" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="qlT-NP-L0u">
                                        <rect key="frame" x="366" y="6" width="32" height="28"/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="qlT-NP-L0u" secondAttribute="height" multiplier="1:1" id="OeL-WK-OUY"/>
                                        </constraints>
                                    </imageView>
                                </subviews>
...
